syntax = "proto3";
option csharp_namespace = "GrpcService";
package Account;



service AccountService {
  rpc GetAccounts (GetAccountsRequest) returns (AccountList);
}



message AccountList{
	repeated AccountModel accounts = 1;
}
message AccountModel {
	string Id = 1;
	string Login = 2;
	string Password = 3;
	string Number = 4; 
	string Cookie = 5;
	Status Status = 6;
}
enum Status{
	Active = 0;
	Inactive = 1;
	NoNumber = 2;
}



message GetAccountsRequest{
	int32 count = 1;
}