syntax = "proto3";
option csharp_namespace = "GrpcService";
package Account;



service Account {
  rpc GetAllAccounts (null) returns (AccountList);
}